lib/stratiform/res/test/stratiform/tel/pos/sigil-semicolon.tel
tel 1.0 https://example.com/s ;

; comment with semicolon
hello
