lib/stratiform/res/test/stratiform/tel/neg/e105-sigil-is-letter.tel
tel 1.0 https://example.com/schema A
hello
